[package]
name = "spo2"
version = "0.1.0"
authors = ["Clément Renault <clement@meilisearch.com>"]
edition = "2018"

[dependencies]
arraydeque = "0.4.5"
futures-preview = "0.3.0-alpha.18"
futures-timer = "0.4.0"
once_cell = "1.0.2"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"
sled = "0.28.0"
surf = "1.0.2"
url = "2.1.0"
urldecode = "0.1.1"
ws = "0.9.0"

[dependencies.tide]
git = "https://github.com/rustasync/tide.git"
rev = "af0b900"
