[package]
name = "spo2"
version = "0.1.0"
authors = ["Clément Renault <clement@meilisearch.com>"]
edition = "2018"

[dependencies]
arraydeque = "0.4.5"
futures-preview = "0.3.0-alpha.18"
futures-timer = "0.4.0"
isahc = { version = "0.7.4", features = ["nightly"] }
once_cell = "1.0.2"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"
sled = "0.28.0"
subslice = "0.2.2"
tiny_http = "0.6.2"
url = { version = "2.1.0", features = ["serde"] }
ws = "0.9.0"

[dependencies.futures-stream-batch]
git = "https://github.com/Kerollmops/futures-stream-batch.git"
